Korrekturen Splitbuchung (#156)
* Korrekturen Splitbuchung

* Logger bleibt

* Lösche auch dependent neue Buchungen

* Merge